fixes leaves on mobile hp

--- a/style.css
+++ b/style.css
@@ -451,66 +451,7 @@ td {
   display: none;
 }
 
-/*  */
-@media only screen and (max-width: 600px) {
-  .falling-leaves{
-      display: none;
-  }
-  .divider-mobile {
-    display: block;
-    border: 0.1px solid black;
-  }
-  .main-container {
-    display: block;
-  }
 
-  .main-container div {
-    display: block;
-  }
-
-  .assignment-grid-container {
-    display: grid;
-    grid-template-columns: auto auto auto;
-  }
-
-  #main-panel {
-    padding: 1em;
-  }
-
-  #main-panel li,
-  ol {
-    margin-left: 15px;
-  }
-
-  #main-panel h1,
-  h2 {
-    margin-top: 15px;
-    margin-bottom: 0;
-  }
-
-  #sub-nav {
-    text-align: left;
-    margin: 0;
-    width: auto;
-  }
-
-  .nav-container div {
-    display: inline-block;
-    padding: 5px;
-  }
-
-  #reading-table td ul {
-    margin: 0 0 0 -20px;
-  }
-
-  .two-grid-container {
-    overflow: hidden;
-  }
-
-  .people {
-    margin-left: -15px;
-  }
-}
 
 iframe {
   margin: 0;
@@ -569,4 +510,72 @@ img {
   display: inline-box;
   float: left;
   width: 650px;
+}
+
+/*  MOBILE */
+@media only screen and (max-width: 600px) {
+  .falling-leaves{
+      opacity:0.3;
+  }
+  .nav-container{
+    position: relative;
+    z-index: 1;
+  }
+  .splash{
+    width: auto;
+  }
+  .divider-mobile {
+    display: block;
+    border: 0.1px solid black;
+  }
+  .main-container {
+    display: block;
+  }
+
+  .main-container div {
+    display: block;
+  }
+
+  .assignment-grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+  }
+
+  #main-panel {
+    padding: 1em;
+  }
+
+  #main-panel li,
+  ol {
+    margin-left: 15px;
+  }
+
+  #main-panel h1,
+  h2 {
+    margin-top: 15px;
+    margin-bottom: 0;
+  }
+
+  #sub-nav {
+    text-align: left;
+    margin: 0;
+    width: auto;
+  }
+
+  .nav-container div {
+    display: inline-block;
+    padding: 5px;
+  }
+
+  #reading-table td ul {
+    margin: 0 0 0 -20px;
+  }
+
+  .two-grid-container {
+    overflow: hidden;
+  }
+
+  .people {
+    margin-left: -15px;
+  }
 }
